ParserGen/parser/expr_parser.go
// Code generated from parser/ExprParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // ExprParser

import (
	"fmt"
	"strconv"
  	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}


type ExprParser struct {
	*antlr.BaseParser
}

var ExprParserParserStaticData struct {
  once                   sync.Once
  serializedATN          []int32
  LiteralNames           []string
  SymbolicNames          []string
  RuleNames              []string
  PredictionContextCache *antlr.PredictionContextCache
  atn                    *antlr.ATN
  decisionToDFA          []*antlr.DFA
}

func exprparserParserInit() {
  staticData := &ExprParserParserStaticData
  staticData.LiteralNames = []string{
    "", "", "", "", "", "", "", "", "", "'nothing'", "'fraud'", "'cancelled'", 
    "'invalid'", "'alert'", "'conflict'", "'ungraded'", "'obscured'", "'absent'", 
    "'present'", "'excused'", "'toolow'", "", "'=>'", "'?'", "':'", "';'", 
    "','", "'='", "'['", "']'", "'('", "')'", "", "", "'!~'", "'~'", "'+'", 
    "'-'", "'*'", "'/'", "'>'", "'>='", "'!='", "'=='", "'<='", "'<'", "'&&'", 
    "'||'", "'!'",
  }
  staticData.SymbolicNames = []string{
    "", "APPLY", "TO", "EXPLAINQ", "EXPLAIN", "MAX", "MIN", "ROUND", "IN", 
    "CONST_NOTHING", "CONST_FRAUD", "CONST_CANCELLED", "CONST_INVALID", 
    "CONST_ALERT", "COSNT_CONFLICT", "CONST_UNGRADED", "COSNT_OBSCURED", 
    "CONST_ABSENT", "CONST_PRESENT", "CONST_EXCUSED", "CONST_TOOLOW", "IDENTIFIER", 
    "LOP", "ASK", "COLON", "SEMICOLON", "COMMA", "ASSIGN", "LBRACK", "RBRACK", 
    "LPAREN", "RPAREN", "STRING", "REGEX", "NM", "MA", "ADD", "SUB", "MUL", 
    "DIV", "GT", "GE", "NE", "EQ", "LE", "LT", "AND", "OR", "NOT", "FLOAT", 
    "INT", "SPACES",
  }
  staticData.RuleNames = []string{
    "algorithm", "apply", "explain", "function", "constant", "constantList", 
    "lambda", "list", "expression", "assignmentExpression", "iterateExpression", 
    "conditionalExpression", "logicalOrExpression", "logicalAndExpression", 
    "equalityExpression", "relationalExpression", "regexExpression", "additiveExpression", 
    "multiplicativeExpression", "unaryExpression", "functionCall",
  }
  staticData.PredictionContextCache = antlr.NewPredictionContextCache()
  deserializer := antlr.NewATNDeserializer(nil)
  staticData.atn = deserializer.Deserialize(staticData.serializedATN)
  atn := staticData.atn
  staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
  decisionToDFA := staticData.decisionToDFA
  for index, state := range atn.DecisionToState {
    decisionToDFA[index] = antlr.NewDFA(state, index)
  }
}

// ExprParserInit initializes any static state used to implement ExprParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewExprParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ExprParserInit() {
  staticData := &ExprParserParserStaticData
  staticData.once.Do(exprparserParserInit)
}

// NewExprParser produces a new parser instance for the optional input antlr.TokenStream.
func NewExprParser(input antlr.TokenStream) *ExprParser {
	ExprParserInit()
	this := new(ExprParser)
	this.BaseParser = antlr.NewBaseParser(input)
  staticData := &ExprParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "ExprParser.g4"

	return this
}


// ExprParser tokens.
const (
	ExprParserEOF = antlr.TokenEOF
	ExprParserAPPLY = 1
	ExprParserTO = 2
	ExprParserEXPLAINQ = 3
	ExprParserEXPLAIN = 4
	ExprParserMAX = 5
	ExprParserMIN = 6
	ExprParserROUND = 7
	ExprParserIN = 8
	ExprParserCONST_NOTHING = 9
	ExprParserCONST_FRAUD = 10
	ExprParserCONST_CANCELLED = 11
	ExprParserCONST_INVALID = 12
	ExprParserCONST_ALERT = 13
	ExprParserCOSNT_CONFLICT = 14
	ExprParserCONST_UNGRADED = 15
	ExprParserCOSNT_OBSCURED = 16
	ExprParserCONST_ABSENT = 17
	ExprParserCONST_PRESENT = 18
	ExprParserCONST_EXCUSED = 19
	ExprParserCONST_TOOLOW = 20
	ExprParserIDENTIFIER = 21
	ExprParserLOP = 22
	ExprParserASK = 23
	ExprParserCOLON = 24
	ExprParserSEMICOLON = 25
	ExprParserCOMMA = 26
	ExprParserASSIGN = 27
	ExprParserLBRACK = 28
	ExprParserRBRACK = 29
	ExprParserLPAREN = 30
	ExprParserRPAREN = 31
	ExprParserSTRING = 32
	ExprParserREGEX = 33
	ExprParserNM = 34
	ExprParserMA = 35
	ExprParserADD = 36
	ExprParserSUB = 37
	ExprParserMUL = 38
	ExprParserDIV = 39
	ExprParserGT = 40
	ExprParserGE = 41
	ExprParserNE = 42
	ExprParserEQ = 43
	ExprParserLE = 44
	ExprParserLT = 45
	ExprParserAND = 46
	ExprParserOR = 47
	ExprParserNOT = 48
	ExprParserFLOAT = 49
	ExprParserINT = 50
	ExprParserSPACES = 51
)

// ExprParser rules.
const (
	ExprParserRULE_algorithm = 0
	ExprParserRULE_apply = 1
	ExprParserRULE_explain = 2
	ExprParserRULE_function = 3
	ExprParserRULE_constant = 4
	ExprParserRULE_constantList = 5
	ExprParserRULE_lambda = 6
	ExprParserRULE_list = 7
	ExprParserRULE_expression = 8
	ExprParserRULE_assignmentExpression = 9
	ExprParserRULE_iterateExpression = 10
	ExprParserRULE_conditionalExpression = 11
	ExprParserRULE_logicalOrExpression = 12
	ExprParserRULE_logicalAndExpression = 13
	ExprParserRULE_equalityExpression = 14
	ExprParserRULE_relationalExpression = 15
	ExprParserRULE_regexExpression = 16
	ExprParserRULE_additiveExpression = 17
	ExprParserRULE_multiplicativeExpression = 18
	ExprParserRULE_unaryExpression = 19
	ExprParserRULE_functionCall = 20
)

// IAlgorithmContext is an interface to support dynamic dispatch.
type IAlgorithmContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllApply() []IApplyContext
	Apply(i int) IApplyContext
	AllExplain() []IExplainContext
	Explain(i int) IExplainContext

	// IsAlgorithmContext differentiates from other interfaces.
	IsAlgorithmContext()
}

type AlgorithmContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAlgorithmContext() *AlgorithmContext {
	var p = new(AlgorithmContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_algorithm
	return p
}

func InitEmptyAlgorithmContext(p *AlgorithmContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_algorithm
}

func (*AlgorithmContext) IsAlgorithmContext() {}

func NewAlgorithmContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AlgorithmContext {
	var p = new(AlgorithmContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ExprParserRULE_algorithm

	return p
}

func (s *AlgorithmContext) GetParser() antlr.Parser { return s.parser }

func (s *AlgorithmContext) EOF() antlr.TerminalNode {
	return s.GetToken(ExprParserEOF, 0)
}

func (s *AlgorithmContext) AllApply() []IApplyContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IApplyContext); ok {
			len++
		}
	}

	tst := make([]IApplyContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IApplyContext); ok {
			tst[i] = t.(IApplyContext)
			i++
		}
	}

	return tst
}

func (s *AlgorithmContext) Apply(i int) IApplyContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IApplyContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IApplyContext)
}

func (s *AlgorithmContext) AllExplain() []IExplainContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IExplainContext); ok {
			len++
		}
	}

	tst := make([]IExplainContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IExplainContext); ok {
			tst[i] = t.(IExplainContext)
			i++
		}
	}

	return tst
}

func (s *AlgorithmContext) Explain(i int) IExplainContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExplainContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExplainContext)
}

func (s *AlgorithmContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AlgorithmContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *AlgorithmContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.EnterAlgorithm(s)
	}
}

func (s *AlgorithmContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.ExitAlgorithm(s)
	}
}

func (s *AlgorithmContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExprParserVisitor:
		return t.VisitAlgorithm(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *ExprParser) Algorithm() (localctx IAlgorithmContext) {
	localctx = NewAlgorithmContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ExprParserRULE_algorithm)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(46)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for ((int64(_la) & ^0x3f) == 0 && ((int64(1) << _la) & 26) != 0) {
		p.SetState(44)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case ExprParserAPPLY:
			{
				p.SetState(42)
				p.Apply()
			}


		case ExprParserEXPLAINQ, ExprParserEXPLAIN:
			{
				p.SetState(43)
				p.Explain()
			}



		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(48)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(49)
		p.Match(ExprParserEOF)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IApplyContext is an interface to support dynamic dispatch.
type IApplyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	APPLY() antlr.TerminalNode
	Lambda() ILambdaContext
	TO() antlr.TerminalNode
	List() IListContext
	SEMICOLON() antlr.TerminalNode

	// IsApplyContext differentiates from other interfaces.
	IsApplyContext()
}

type ApplyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyApplyContext() *ApplyContext {
	var p = new(ApplyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_apply
	return p
}

func InitEmptyApplyContext(p *ApplyContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_apply
}

func (*ApplyContext) IsApplyContext() {}

func NewApplyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ApplyContext {
	var p = new(ApplyContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ExprParserRULE_apply

	return p
}

func (s *ApplyContext) GetParser() antlr.Parser { return s.parser }

func (s *ApplyContext) APPLY() antlr.TerminalNode {
	return s.GetToken(ExprParserAPPLY, 0)
}

func (s *ApplyContext) Lambda() ILambdaContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILambdaContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILambdaContext)
}

func (s *ApplyContext) TO() antlr.TerminalNode {
	return s.GetToken(ExprParserTO, 0)
}

func (s *ApplyContext) List() IListContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IListContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IListContext)
}

func (s *ApplyContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(ExprParserSEMICOLON, 0)
}

func (s *ApplyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ApplyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ApplyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.EnterApply(s)
	}
}

func (s *ApplyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.ExitApply(s)
	}
}

func (s *ApplyContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExprParserVisitor:
		return t.VisitApply(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *ExprParser) Apply() (localctx IApplyContext) {
	localctx = NewApplyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ExprParserRULE_apply)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(51)
		p.Match(ExprParserAPPLY)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(52)
		p.Lambda()
	}
	{
		p.SetState(53)
		p.Match(ExprParserTO)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(54)
		p.List()
	}
	{
		p.SetState(55)
		p.Match(ExprParserSEMICOLON)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IExplainContext is an interface to support dynamic dispatch.
type IExplainContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsExplainContext differentiates from other interfaces.
	IsExplainContext()
}

type ExplainContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExplainContext() *ExplainContext {
	var p = new(ExplainContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_explain
	return p
}

func InitEmptyExplainContext(p *ExplainContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_explain
}

func (*ExplainContext) IsExplainContext() {}

func NewExplainContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExplainContext {
	var p = new(ExplainContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ExprParserRULE_explain

	return p
}

func (s *ExplainContext) GetParser() antlr.Parser { return s.parser }

func (s *ExplainContext) CopyAll(ctx *ExplainContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *ExplainContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExplainContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}




type ExplainConditionalContext struct {
	ExplainContext
}

func NewExplainConditionalContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExplainConditionalContext {
	var p = new(ExplainConditionalContext)

	InitEmptyExplainContext(&p.ExplainContext)
	p.parser = parser
	p.CopyAll(ctx.(*ExplainContext))

	return p
}

func (s *ExplainConditionalContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExplainConditionalContext) EXPLAINQ() antlr.TerminalNode {
	return s.GetToken(ExprParserEXPLAINQ, 0)
}

func (s *ExplainConditionalContext) Expression() IExpressionContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ExplainConditionalContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(ExprParserSEMICOLON, 0)
}


func (s *ExplainConditionalContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.EnterExplainConditional(s)
	}
}

func (s *ExplainConditionalContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.ExitExplainConditional(s)
	}
}

func (s *ExplainConditionalContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExprParserVisitor:
		return t.VisitExplainConditional(s)

	default:
		return t.VisitChildren(s)
	}
}


type ExplainOverrideContext struct {
	ExplainContext
	target antlr.Token
	source antlr.Token
}

func NewExplainOverrideContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExplainOverrideContext {
	var p = new(ExplainOverrideContext)

	InitEmptyExplainContext(&p.ExplainContext)
	p.parser = parser
	p.CopyAll(ctx.(*ExplainContext))

	return p
}


func (s *ExplainOverrideContext) GetTarget() antlr.Token { return s.target }

func (s *ExplainOverrideContext) GetSource() antlr.Token { return s.source }


func (s *ExplainOverrideContext) SetTarget(v antlr.Token) { s.target = v }

func (s *ExplainOverrideContext) SetSource(v antlr.Token) { s.source = v }

func (s *ExplainOverrideContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExplainOverrideContext) EXPLAINQ() antlr.TerminalNode {
	return s.GetToken(ExprParserEXPLAINQ, 0)
}

func (s *ExplainOverrideContext) ASSIGN() antlr.TerminalNode {
	return s.GetToken(ExprParserASSIGN, 0)
}

func (s *ExplainOverrideContext) COMMA() antlr.TerminalNode {
	return s.GetToken(ExprParserCOMMA, 0)
}

func (s *ExplainOverrideContext) STRING() antlr.TerminalNode {
	return s.GetToken(ExprParserSTRING, 0)
}

func (s *ExplainOverrideContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(ExprParserSEMICOLON, 0)
}

func (s *ExplainOverrideContext) AllIDENTIFIER() []antlr.TerminalNode {
	return s.GetTokens(ExprParserIDENTIFIER)
}

func (s *ExplainOverrideContext) IDENTIFIER(i int) antlr.TerminalNode {
	return s.GetToken(ExprParserIDENTIFIER, i)
}


func (s *ExplainOverrideContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.EnterExplainOverride(s)
	}
}

func (s *ExplainOverrideContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.ExitExplainOverride(s)
	}
}

func (s *ExplainOverrideContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExprParserVisitor:
		return t.VisitExplainOverride(s)

	default:
		return t.VisitChildren(s)
	}
}


type ExplainBasicContext struct {
	ExplainContext
}

func NewExplainBasicContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExplainBasicContext {
	var p = new(ExplainBasicContext)

	InitEmptyExplainContext(&p.ExplainContext)
	p.parser = parser
	p.CopyAll(ctx.(*ExplainContext))

	return p
}

func (s *ExplainBasicContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExplainBasicContext) EXPLAIN() antlr.TerminalNode {
	return s.GetToken(ExprParserEXPLAIN, 0)
}

func (s *ExplainBasicContext) Expression() IExpressionContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ExplainBasicContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(ExprParserSEMICOLON, 0)
}


func (s *ExplainBasicContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.EnterExplainBasic(s)
	}
}

func (s *ExplainBasicContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.ExitExplainBasic(s)
	}
}

func (s *ExplainBasicContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExprParserVisitor:
		return t.VisitExplainBasic(s)

	default:
		return t.VisitChildren(s)
	}
}



func (p *ExprParser) Explain() (localctx IExplainContext) {
	localctx = NewExplainContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ExprParserRULE_explain)
	p.SetState(72)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		localctx = NewExplainBasicContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(57)
			p.Match(ExprParserEXPLAIN)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}
		{
			p.SetState(58)
			p.Expression()
		}
		{
			p.SetState(59)
			p.Match(ExprParserSEMICOLON)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}


	case 2:
		localctx = NewExplainConditionalContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(61)
			p.Match(ExprParserEXPLAINQ)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}
		{
			p.SetState(62)
			p.Expression()
		}
		{
			p.SetState(63)
			p.Match(ExprParserSEMICOLON)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}


	case 3:
		localctx = NewExplainOverrideContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(65)
			p.Match(ExprParserEXPLAINQ)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}
		{
			p.SetState(66)

			var _m = p.Match(ExprParserIDENTIFIER)

			localctx.(*ExplainOverrideContext).target = _m
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}
		{
			p.SetState(67)
			p.Match(ExprParserASSIGN)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}
		{
			p.SetState(68)

			var _m = p.Match(ExprParserIDENTIFIER)

			localctx.(*ExplainOverrideContext).source = _m
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}
		{
			p.SetState(69)
			p.Match(ExprParserCOMMA)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}
		{
			p.SetState(70)
			p.Match(ExprParserSTRING)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}
		{
			p.SetState(71)
			p.Match(ExprParserSEMICOLON)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}


errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IFunctionContext is an interface to support dynamic dispatch.
type IFunctionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	MAX() antlr.TerminalNode
	MIN() antlr.TerminalNode
	ROUND() antlr.TerminalNode

	// IsFunctionContext differentiates from other interfaces.
	IsFunctionContext()
}

type FunctionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFunctionContext() *FunctionContext {
	var p = new(FunctionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_function
	return p
}

func InitEmptyFunctionContext(p *FunctionContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_function
}

func (*FunctionContext) IsFunctionContext() {}

func NewFunctionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FunctionContext {
	var p = new(FunctionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ExprParserRULE_function

	return p
}

func (s *FunctionContext) GetParser() antlr.Parser { return s.parser }

func (s *FunctionContext) MAX() antlr.TerminalNode {
	return s.GetToken(ExprParserMAX, 0)
}

func (s *FunctionContext) MIN() antlr.TerminalNode {
	return s.GetToken(ExprParserMIN, 0)
}

func (s *FunctionContext) ROUND() antlr.TerminalNode {
	return s.GetToken(ExprParserROUND, 0)
}

func (s *FunctionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunctionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *FunctionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.EnterFunction(s)
	}
}

func (s *FunctionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.ExitFunction(s)
	}
}

func (s *FunctionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExprParserVisitor:
		return t.VisitFunction(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *ExprParser) Function() (localctx IFunctionContext) {
	localctx = NewFunctionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ExprParserRULE_function)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(74)
		_la = p.GetTokenStream().LA(1)

		if !(((int64(_la) & ^0x3f) == 0 && ((int64(1) << _la) & 224) != 0)) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

